[tool.poetry]
name = "n5-zarr-test"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Caleb Hulbert <hulbertc@janelia.hhmi.org>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
zarr = "^2.15.0"
numcodecs = "^0.11.0"
pathlib = "^1.0.1"
tensorstore = "^0.1.64"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
